--- a/estilos.css
+++ b/estilos.css
@@ -1,19 +1,57 @@
-@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Raleway:wght@300;400;500;600&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
 body{
-    font-family: 'Libre Baskerville', serif;
+    font-family: 'Raleway', sans-serif;
 }
+
+
+:root {
+    --texto-light: #86887b;
+    --texto-dark: #6b714d;
+    --amarillo: #d4cb9c;
+}
+
+.material-symbols-outlined {
+    color: white;
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24;
+  }
 
 /* Inicio */
 
-#header-inicio{
-    background-image: url(img/background-header.png);
+#header-inicio {
+    background-image: url(img/header-bg.jpg);
+    background-size: cover;
+    background-position: fixed;
+    width: 100%;
     height: 80vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
 }
+
+#header-inicio p{
+    color: var(--texto-light);
+    font-size: 2em;
+}
+
+h1 {
+    font-family: 'Libre Baskerville', serif;
+    color: var(--texto-dark);
+    font-size: 4em;
+    padding: 0.4em;
+}
+
+
 
